--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+  "autoload": {
+   "psr-4": {"ConnectFour\\":"src/"}
+  },
   "require" : {
     "silex/silex": "^1.3",
     "monolog/monolog": "^1.4",
